# True-Feedback

./: .env_template  .gitignore  LICENSE  README.md
backend/: Cargo.toml  README.md
backend/migrations/2023-06-21-061130_feedback_given_function/: down.sql  up.sql
backend/migrations/2023-06-21-061138_evaluation/: down.sql  up.sql
backend/migrations/2023-06-21-061140_event_user/: up.sql
backend/migrations/2023-06-21-114846_evaluation_feedback/: down.sql  up.sql
backend/migrations/2023-06-21-133040_event_feedback/: down.sql  up.sql
backend/migrations_ideas/2023-06-21-131212_event_user/: down.sql  up.sql
backend/migrations_ideas/2023-06-21-133040_event_feedback/: up.sql
backend/src/: api.rs  api_42.rs  db.rs  lib.rs  main.rs  permission.rs
backend/src/api/: admin.rs  auth.rs  error.rs  evaluation.rs  feedback.rs  feedback_structure.rs  ping.rs
backend/src/api_42/: scale_team.rs  team.rs  token.rs
backend/src/db/: action.rs  enums.rs  migration.rs  model.rs  new.rs  schema.rs
frontend/: README.md  init.js  main.js  manifest.json  playground.js  requests.js  test.js
frontend/chrome/: main.js  manifest.json  redirect.js  requests.js
frontend/firefox/: main.js  manifest.json  redirect.js  requests.js
frontend/lib/: network.js
sql/: test.sql
